tests/baselines/reference/jsdocParseBackquotedParamName.errors.txt
a.js(5,18): error TS1016: A required parameter cannot follow an optional parameter.


==== a.js (1 errors) ====
    /**
     * @param {string=} `args`
     * @param `bwarg` {?number?}
     */
    function f(args, bwarg) {
                     ~~~~~
!!! error TS1016: A required parameter cannot follow an optional parameter.
    }
    
==== ts.ts (0 errors) ====
    /**
     * @param `arg` - this is fine
     */
    function g(arg: string) {
    }
    